Corriger la numérotation des pages
Signed-off-by: jcbrinfo <jcbrinfo@users.noreply.github.com>

--- a/SchoolReport.cls
+++ b/SchoolReport.cls
@@ -255,6 +255,17 @@
 \RequirePackage[margin=1.5cm, inner=6.5cm, outer=1.9cm, nohead, includefoot]{geometry}
 
 % ------------------------------------------------------------------------------
+% Chapitres et sections
+% ------------------------------------------------------------------------------
+
+% Débuter le corps du document
+\newcommand{\body}{
+	\newpage
+	\pagenumbering{arabic}
+	\setcounter{page}{1}
+}
+
+% ------------------------------------------------------------------------------
 % Pages
 % ------------------------------------------------------------------------------
 
