--- a/coquille.tex
+++ b/coquille.tex
@@ -23,6 +23,7 @@
 % Document principal
 % ------------------------------------------------------------------------------
 
+\body
 \include{introduction}
 …
 
