--- a/test.tex
+++ b/test.tex
@@ -22,6 +22,7 @@
 % Document principal
 % ------------------------------------------------------------------------------
 
+\body
 \chapter{Egerat verissime timore apud quondam ibi advenit diu timore protector}
 Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.
 
