--- a/coquille.tex
+++ b/coquille.tex
@@ -1,5 +1,8 @@
 ﻿\documentclass{SchoolReport}
 % Pour les document en anglais, ajoutez l’option `english`.
+% Si voulez produire un article (où les divisions principales sont les sections)
+% au lieu d’un rapport (où les divisions principales sont les chapitres),
+% ajoutez l’option `article`.
 
 \title{Titre}
 \author{Votre Nom}
