--- a/coquille.tex
+++ b/coquille.tex
@@ -1,8 +1,10 @@
 ﻿\documentclass{SchoolReport}
-% Pour les document en anglais, ajoutez l’option `english`.
-% Si voulez produire un article (où les divisions principales sont les sections)
-% au lieu d’un rapport (où les divisions principales sont les chapitres),
-% ajoutez l’option `article`.
+% * Pour les document en anglais, ajoutez l’option `english`.
+% * Si vous voulez produire un article (où les divisions principales sont les
+%   sections) au lieu d’un rapport (où les divisions principales sont les
+%   chapitres),  ajoutez l’option `article`.
+% * Pour les documents recourant au style de citation « numérique », ajoutez
+%   l’option `citeNumbers`.
 
 \title{Titre}
 \author{Votre Nom}
