--- a/SchoolReport.cls
+++ b/SchoolReport.cls
@@ -70,6 +70,7 @@
 % ------------------------
 % * `babel`
 % * `bookmark`
+% * `comment`
 % * `fancyvrb`
 % * `float`
 % * `fontspec`
@@ -137,6 +138,12 @@
 \ProcessOptions*
 
 \LoadClass[twoside, openright, letterpaper, 12pt]{report}
+
+% ------------------------------------------------------------------------------
+% Commentaires
+% ------------------------------------------------------------------------------
+
+\RequirePackage{comment}
 
 % ------------------------------------------------------------------------------
 % PDF
