Espacer les paragraphes

--- a/SchoolReport.cls
+++ b/SchoolReport.cls
@@ -254,6 +254,12 @@
 \definecolor{table-row-even}{HTML}{FFFFFF}
 
 % ------------------------------------------------------------------------------
+% Paragraphes
+% ------------------------------------------------------------------------------
+
+\parskip=2ex
+
+% ------------------------------------------------------------------------------
 % Marges
 % ------------------------------------------------------------------------------
 
