Corriger la numérotation des figures
Signed-off-by: jcbrinfo <jcbrinfo@users.noreply.github.com>

--- a/SchoolReport.cls
+++ b/SchoolReport.cls
@@ -229,6 +229,13 @@
 \definecolor{tango-aluminium-6}{HTML}{2E3436}
 
 % ------------------------------------------------------------------------------
+% Figures
+% ------------------------------------------------------------------------------
+
+\renewcommand{\thefigure}{\arabic{section}.\arabic{figure}}
+\renewcommand{\thetable}{\arabic{section}.\arabic{table}}
+
+% ------------------------------------------------------------------------------
 % Code source
 % ------------------------------------------------------------------------------
 \RequirePackage{fancyvrb}
